fixing portfolio padding issue on mobile

--- a/main.css
+++ b/main.css
@@ -364,7 +364,7 @@ main.flex-x {
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 100px;
+  padding-bottom: 70px;
 }
 
 #portfolio-intro {
